# Unfolding-Orthogonal-Polyhedra

./: README.md
data/: box_and_cube.fold  boxes.fold  boxes2.fold  boxes3.fold  boxes4.fold  boxes5.fold  boxes6.fold  dual_graph.fold  rect_box.fold  rect_with_cube.fold  test_case1.fold  test_case3.fold  test_case4.fold  test_case5.fold  the_box.fold  unit_cube.fold
data/sample/: test_case2.fold  test_case6.fold
data/test/: rect_box.fold  unit_cube_open.fold
src/: __init__.py  box.fold  component.py  component_node.py  cuts.fold  faces.py  fold_parser.py  graph.py  main.py  path.fold  polyhedra_generation.py  polyhedron.py  tmp.fold  tmp2.fold
viewer/: CMakeLists.txt  README.txt
viewer/sample_solution/athena/: a3
viewer/sample_solution/mac/: a3
viewer/src/: gl.h  gl_util.cpp  gl_util.h  main.cpp  recorder.cpp  recorder.h  vertexrecorder.cpp  vertexrecorder.h
viewer/submission/: README.txt  a3
viewer/submission/src/: clothsystem.cpp  clothsystem.h  gelatinsystem.cpp  gelatinsystem.h  main.cpp  particlesystem.h  pendulumsystem.cpp  pendulumsystem.h  simplesystem.cpp  timestepper.cpp
viewer/vecmath/: Matrix3f.cpp  Matrix4f.cpp
viewer/vecmath/include/: Matrix3f.h  Matrix4f.h
